add refreshCoverBtn for refresh book info and cover

--- a/ui/BookMain.ui
+++ b/ui/BookMain.ui
@@ -48,11 +48,22 @@
       <widget class="QWidget" name="">
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
-         <widget class="QPushButton" name="saveBookInfoBtn">
-          <property name="text">
-           <string>Save Book Info</string>
-          </property>
-         </widget>
+         <layout class="QHBoxLayout" name="horizontalLayout_15">
+          <item>
+           <widget class="QPushButton" name="saveBookInfoBtn">
+            <property name="text">
+             <string>Save Book Info</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="refreshCoverBtn">
+            <property name="text">
+             <string>Refresh Book</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </item>
         <item>
          <widget class="QLabel" name="coverImgLabel">
